--- a/src/main/resources/template/velocity/SqlMapServiceImpl.vm
+++ b/src/main/resources/template/velocity/SqlMapServiceImpl.vm
@@ -52,7 +52,7 @@ public class ${sqlMapServiceImplJavaClassName} implements ${serviceFullPackageNa
 	 * delete pojo by pk;
 	 */
 	@Override
-	public void ${deleteMethodPrefix}${table.entityBeanName}(#pks_argument(${table.columns} ${sqlMapMarkUse})){
+	public void ${deleteMethodPrefix}${table.entityBeanName}(#pks_argument_array(${table.columns} ${sqlMapMarkUse})){
 		java.util.Map<String, Object> params = new java.util.HashMap<String, Object>();
 		#pks_params(${table.columns} ${sqlMapMarkUse})
 		this.dao.${deleteMethodPrefix}${table.entityBeanName}(params);
