--- a/src/main/resources/template/velocity/SqlMap.vm
+++ b/src/main/resources/template/velocity/SqlMap.vm
@@ -1,10 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE sqlMap PUBLIC "-//ibatis.apache.org//DTD SQL Map 2.0//EN" "http://ibatis.apache.org/dtd/sql-map-2.dtd">
-<sqlMap>
+<sqlMap namespace="${pojoFullPackageName}.${table.entityBeanName}">
 #set($i = 0)
 #set($j = 0)
 #set($H='#')
-<insert id="${saveMethodPrefix}${table.entityBeanName}" parameterClass="${pojoFullPackageName}.${table.entityBeanName}">
+
+#**<sql id="${queryPagingMethodPrefix}Condition">
+	<dynamic prepend="WHERE">
+		<!-- iterate 表示迭代, 迭代必须是集合list -->
+		<isNotNull property="citys" prepend="and">
+			(
+				<iterate conjunction="or" open="(" close=")" property="citys">
+					a.area_name like CONCAT(#citys[]# ,'%')
+                </iterate>
+             )                                                                                             
+		</isNotNull>
+		<isNotEmpty property="areaName" prepend="and"> a.area_name like CONCAT('%', #areaName# ,'%')</isNotEmpty>
+		<isNotEmpty property="ptName" prepend="and"> p.pt_name  like CONCAT('%', #ptName# ,'%')</isNotEmpty>
+		<isNotEmpty property="startDate" prepend="and"> r.iden_date &gt;= #startDate#</isNotEmpty>
+		<isNotEmpty property="endDate" prepend="and"> r.iden_date &lt;= #endDate#</isNotEmpty>
+		<isNotEmpty property="weekDes" prepend="and"> r.week_des = #weekDes#</isNotEmpty>
+	</dynamic>
+</sql>**#
+	
+<insert id="${saveMethodPrefix}" parameterClass="${pojoFullPackageName}.${table.entityBeanName}">
 	<![CDATA[insert into ${table.tableName}(#foreach( $column in ${table.columns}) #if ($i != 0), #end #if(${column.autoIncrement} == false) ${column.columnName} #set($i = $i + 1) #end #end ) values( #foreach( $column in ${table.columns}) #if ($j != 0), #end #if(${column.autoIncrement} == false) $H#if(${sqlMapMarkUse}==1)${column.propertyName}#else${column.columnName}#end$H #set($j = $j + 1) #end #end )]]>
 	<selectKey resultClass="#foreach( $column in ${table.columns})#if(${column.autoIncrement})${column.javaType}#end#end" keyProperty="#foreach( $column in ${table.columns})#if(${column.autoIncrement})${column.propertyName}#end#end"> 
 		<![CDATA[SELECT LAST_INSERT_ID() AS ID ]]>   
@@ -13,16 +32,16 @@
 
 #set($i = 0)
 #set($j = 0)
-<update id="${updateMethodPrefix}${table.entityBeanName}" parameterClass="${pojoFullPackageName}.${table.entityBeanName}">
+<update id="${updateMethodPrefix}" parameterClass="${pojoFullPackageName}.${table.entityBeanName}">
 <![CDATA[update ${table.tableName} set #foreach( $column in ${table.columns}) #if ($i != 0), #end #if(${column.primary} == false) ${column.columnName} = $H#if(${sqlMapMarkUse}==1)${column.propertyName}#else${column.columnName}#end$H #set($i = $i + 1) #end #end  where #foreach( $column in ${table.columns}) #if (${column.primary}) #if ($j != 0)and #end ${column.columnName} = $H#if(${sqlMapMarkUse}==1)${column.propertyName}#else${column.columnName}#end$H #set($j = $j + 1) #end #end]]>
 </update>
 #set($j=0)	
-<select id="${getMethodPrefix}${table.entityBeanName}" parameterClass="java.util.Map" resultClass="java.util.HashMap">
-<![CDATA[select #foreach( $column in ${table.columns}) #if ($velocityCount != 1), #end ${column.columnName} #end from ${table.tableName} where #foreach( $column in ${table.columns}) #if (${column.primary}) #if ($j != 0)and #end ${column.columnName} = $H#if(${sqlMapMarkUse}==1)${column.propertyName}#else${column.columnName}#end$H #set($j = $j + 1) #end #end]]> 
+<select id="${getMethodPrefix}" parameterClass="java.util.Map" resultClass="java.util.HashMap">
+<![CDATA[select #foreach( $column in ${table.columns}) #if ($velocityCount != 1), #end ${column.columnName} as ${column.columnAlias} #end from ${table.tableName} where #foreach( $column in ${table.columns}) #if (${column.primary}) #if ($j != 0)and #end ${column.columnName} = $H#if(${sqlMapMarkUse}==1)${column.propertyName}#else${column.columnName}#end$H #set($j = $j + 1) #end #end]]> 
 </select>
 
 #set($j=0)
-<delete id="${deleteMethodPrefix}${table.entityBeanName}" parameterClass="java.util.Map">
+<delete id="${deleteMethodPrefix}" parameterClass="java.util.Map">
 <![CDATA[delete from ${table.tableName} where #foreach( $column in ${table.columns}) #if (${column.primary}) #if ($j != 0)and #end ${column.columnName} in ]]> 
 <iterate open="(" close=")" conjunction="," property="#if(${sqlMapMarkUse}==1)${column.propertyName}#else${column.columnName}#end" >
 <![CDATA[$H#if(${sqlMapMarkUse}==1)${column.propertyName}#else${column.columnName}#end[]$H]]>
@@ -30,20 +49,21 @@
 
 </delete>
 	
-<select id="${queryMethodPrefix}${table.entityBeanName}" parameterClass="${pojoFullPackageName}.${table.entityBeanName}" resultClass="java.util.HashMap">
-<![CDATA[select #foreach( $column in ${table.columns}) #if ($velocityCount != 1), #end t1.${column.columnName} #end from ${table.tableName} t1]]> 
+<select id="${queryMethodPrefix}" parameterClass="${pojoFullPackageName}.${table.entityBeanName}" resultClass="java.util.HashMap">
+<![CDATA[select #foreach( $column in ${table.columns}) #if ($velocityCount != 1), #end t1.${column.columnName} as ${column.columnAlias} #end from ${table.tableName} t1]]> 
 </select>
 
-<select id="${queryPagingMethodPrefix}${table.entityBeanName}" parameterClass="java.util.Map" resultClass="java.util.HashMap">
-<![CDATA[select #foreach( $column in ${table.columns}) #if ($velocityCount != 1), #end t1.${column.columnName} #end from ${table.tableName} t1]]>
+<select id="${queryPagingMethodPrefix}" parameterClass="java.util.Map" resultClass="java.util.HashMap">
+<![CDATA[select #foreach( $column in ${table.columns}) #if ($velocityCount != 1), #end t1.${column.columnName} as ${column.columnAlias} #end from ${table.tableName} t1]]>
+	#**<include refid="${queryPagingMethodPrefix}Condition"/>**#
 	<isNotEmpty property="start">
 		<isNotEmpty property="length">
-			limit #start#, #length#
+			<![CDATA[limit #start#, #length#]]>
 		</isNotEmpty>
 	</isNotEmpty>
 </select>
 
-<select id="${getPagingCountPrefix}${table.entityBeanName}" parameterClass="java.util.Map" resultClass="java.lang.Integer">
+<select id="${getPagingCountPrefix}" parameterClass="java.util.Map" resultClass="java.lang.Integer">
 <![CDATA[select count(1) from ${table.tableName} t1]]>
 </select>
 </sqlMap>
